--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.16.x]
-        os: [ubuntu-latest]
+        os: [ubuntu-2004:202107-02]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Install Go
