override SCION daemon address

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,3 +53,5 @@ jobs:
             supervisor/supervisor.sh start all
     - name: Test
       run: go test ./...
+      env: 
+        SCION_DAEMON_ADDRESS: "127.0.0.12:30255"
